# krustens

./: .gitignore  Cargo.toml  README.md  build.sh  remove_db.sh
.fleet/: settings.json
fixtures/: apple_music_play_activity.csv  spotify_full_history.json  spotify_listens.json
migrations/: 20220725033647_streams.sql  20220725052208_snapshots.sql
resources/: config.json
src/: app_files.rs  commands.rs  config.rs  events.rs  main.rs  persistence.rs  projections.rs  spotify.rs  stores.rs
src/app/: application.rs  chart.rs  command_name.rs  command_parameters.rs  input.rs  message_set.rs  mod.rs  mode.rs  output.rs  state.rs
src/app/chart/: bar_chart.rs  data_point.rs  mod.rs
src/cli/: arguments.rs  commands.rs  generate_args.rs  mod.rs  mode.rs  process_args.rs
src/commands/: add_spotify_listen.rs  add_track_play.rs  mod.rs
src/errors/: event_errors.rs  interactive_error.rs  mod.rs  read_error.rs  write_error.rs
src/events/: event.rs  event_data.rs  listen_added.rs  mod.rs  track_play_added.rs  track_skipped.rs
src/generation/: generate.rs  mod.rs
src/history/: listen.rs
src/interactive/: app.rs  app_message_set.rs  app_mode.rs  app_state.rs  basic.rs  chart.rs  command_name.rs  command_parameters.rs  full.rs  mod.rs  output_folder.rs  prompt.rs
src/logging/: setup.rs
src/persistence/: artist_counts.rs  bootstrap.rs  errors.rs  event_store.rs  file_writer.rs  format.rs  json_reader.rs  mod.rs  output_folder.rs  read_error.rs  reader.rs  state_store.rs  write_error.rs  writer.rs
src/persistence/fs/: file_writer.rs  folder.rs  mod.rs
src/persistence/sqlite/: config.rs  listen_tracker_repository.rs  mod.rs  pool.rs  state_store.rs  store.rs
src/processing/: mod.rs  process.rs
src/processing/commands/: add_track_play.rs
src/processing/events/: event.rs  event_stream.rs  track_play_added.rs  track_skipped.rs
src/projections/: album_listen_counts.rs  has_listen.rs  listen_tracker.rs  mod.rs  projection_repository.rs  repository.rs  sqlite_repository.rs  stats.rs  utils.rs
src/projections/statistics/: artists_counts.rs  calendar_counts.rs  count.rs  counter.rs  event_processor.rs  folder.rs  general.rs  mod.rs  song_counter.rs  time_played.rs
src/projections/stats/: day_stat.rs  folder.rs  general.rs  play_count.rs  skipped_track.rs  song_play_count.rs
src/render/: full.rs  mod.rs
src/spotify/: listen.rs  mod.rs  track_play.rs
src/stores/: add_event_error.rs  error.rs  event_store.rs  event_stream.rs  get_events_error.rs  message.rs  mod.rs  sqlite_store.rs  store.rs
src/track_plays/: album_name.rs  artist_name.rs  mod.rs  normalized.rs  parse.rs  spotify.rs  track_name.rs  track_play.rs
src/track_plays/apple_music/: mod.rs  play_activity.rs
src/utils/: mod.rs  parse.rs
