[package]
name = "krustens"
version = "3.1.0"
description = "A small application to generate json and yaml files of statistics based on Spotify and Apple Music streaming history files."
edition = "2021"
license = "MIT"
exclude = [
    ".vscode/*",
    "build.sh"
]
readme = "README.md"
homepage = "https://github.com/derrickp/krustens"
keywords = ["music", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "migrate" ] }
thiserror = "1.0"
tokio = { version = "1.21", features = ["full"] }
