[package]
name = "krustens"
version = "4.2.0"
description = "A small application to generate json and yaml files of statistics based on Spotify and Apple Music streaming history files."
edition = "2021"
license = "MIT"
exclude = [
    ".github",
    ".vscode/*",
    ".fleet/*",
    "build.sh",
    "remove_db.sh"
]
readme = "README.md"
homepage = "https://github.com/derrickp/krustens"
keywords = ["music", "cli", "tui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.25"
csv = "1.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "migrate" ] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.23", features = ["full"] }
tui = "0.19"
unicode-width = "0.1"
