[package]
name = "krustens"
version = "4.5.1"
description = "A terminal application for getting information from your Spotify or Apple Music listen history."
edition = "2021"
license = "MIT"
exclude = [
    ".github",
    ".vscode/*",
    ".fleet/*",
    "build.sh",
    "remove_db.sh"
]
readme = "README.md"
homepage = "https://github.com/derrickp/krustens"
keywords = ["music", "cli", "tui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
csv = "1.3"
fern = "0.6"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "sqlite", "migrate" ] }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
tokio = { version = "1.33", features = ["full"] }
ratatui = { version = "0.24.0", features = ["all-widgets"]}
uuid = { version = "1.5", features = ["v4", "fast-rng"] }
unicode-width = "0.1"
